# variadic-tensors

./: .gitlab-ci.yml  CMakeLists.txt  main.cpp
src/: actions.h  axis.h  core.cpp  core.h  cuda.cpp  cuda.h  ocv.cpp  ocv.h  shape.h  strides.h  utils.h
variadic_tensors/: actions.h  av.h  buffers.h  core.h  cuda.h  ocv.h  pointers.h  shape.h  slice.h  strides.h  utils.h
